# svg2ico

./: LICENSE  README.md  pyproject.toml
src/svg2ico/: __init__.py  cli.py  converter.py  gui.py
