[project]
name = "svg2ico"
dynamic = ["version"]
description = "Converter from SVG file to Windows .ico file"
authors = [
    {name = "yamakox",email = "yamakox@gmail.com"}
]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta", 
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)",
    "cairosvg (>=2.8.0,<3.0.0)",
    "wxpython (>=4.2.3,<5.0.0)",
    "click (>=8.2.0,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
version = "0.0.0"

[tool.poetry.scripts]
svg2ico = "svg2ico:main"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

# HowTo: poetry add debugpy --group dev && poetry install --with dev
[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.14"

[tool.poetry-dynamic-versioning]
enable = true
